--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
     </div>
   </div>
 </div>
-<a href="https://battlerealms.github.io/chart-compact" class="boxlink2" style="margin-bottom:0.8rem;margin-top:0.5rem"><b>Переключиться на Компактную Версию</b></a><br><br>
+<a href="https://battlerealms.github.io/chart-compact-ru" class="boxlink2" style="margin-bottom:0.8rem;margin-top:0.5rem"><b>Переключиться на Компактную Версию</b></a><br><br>
 </tr>
 <tr>
    <tr class="xl151547">
@@ -1100,7 +1100,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 </td>
     <td class="xl271547_D">Режущий</td>
     <td class="xl271547_D">Магия</td>
-    <td class="xl271547_D">☯ <b>Огонь Меч</b> (Огонь)</td>
+    <td class="xl271547_D">☯ <b>Огненный Меч</b> (Огонь)</td>
     <td class="xl271547_D">
     <input id="collapsible_dw" class="toggle" type="checkbox">
 <label for="collapsible_dw" class="lbl-toggle" tabindex="0"><b>Воодушевление</b></label><div class="collapsible-content"><div class="content-inner"><p>Воин Дракона, находясь в бою, увеличивает урон от атак союзников на 20%.</p></div></div>
