--- a/index.html
+++ b/index.html
@@ -1471,7 +1471,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 <b>Уязвимые Точки</b></label><div class="collapsible-content"><div class="content-inner"><p>Увеличивает урон от атак Мушкетёров на 32%.</p></div></div>
     <input id="collapsible_musk6" class="toggle" type="checkbox">
 <label for="collapsible_musk6" class="lbl-toggleS" tabindex="0">
-<b>Армированное Покрытие</b></label><div class="collapsible-content"><div class="content-inner"><p>Мушкетёр получает на 50% меньше урона от дробящих, и на 25% меньше урона от колющих атак.</p></div></div>
+<b>Усиленная Броня</b></label><div class="collapsible-content"><div class="content-inner"><p>Мушкетёр получает на 50% меньше урона от дробящих, и на 25% меньше урона от колющих атак.</p></div></div>
 </td>
     <td class="xl271547" style="color:#000000;background:#7fbfff"><font size="3">50%</td>
     <td class="xl271547" style="color:#000000;background:#C0C0C0"><font size="3">75%</td>
@@ -1707,7 +1707,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
     <td class="xl271547_S">
     <input id="collapsible_Ронин4" class="toggle" type="checkbox">
 <label for="collapsible_Ронин4" class="lbl-toggleS" tabindex="0">
-<b>Армированное Покрытие</b></label><div class="collapsible-content"><div class="content-inner"><p>Ронин получает на 50% меньше урона от дробящих атак и на 25% меньше от колющих.</p></div></div>
+<b>Усиленная Броня</b></label><div class="collapsible-content"><div class="content-inner"><p>Ронин получает на 50% меньше урона от дробящих атак и на 25% меньше от колющих.</p></div></div>
     <input id="collapsible_Ронин5" class="toggle" type="checkbox">
 <label for="collapsible_Ронин5" class="lbl-toggleS" tabindex="0">
 <b>Cмертоносный Порыв</b></label><div class="collapsible-content"><div class="content-inner"><p>Увеличивает максимальный запас энергии Ронина на 40%.</p></div></div>
@@ -2434,11 +2434,11 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 </td>
     <td class="xl271547_W">
 <input id="collapsible_shale2" class="toggle" type="checkbox">
-<label for="collapsible_shale2" class="lbl-toggleW" tabindex="0"><b>Неудавшийся Эксперимент</b></label><div class="collapsible-content"><div class="content-inner"><p>Сланцевый Лорд очень медленно восстанавливает здоровье и получает огромный урон от взрывных и магических атак.</p></div></div>
+<label for="collapsible_shale2" class="lbl-toggleW" tabindex="0"><b>Неудавшийся Эксперимент</b></label><div class="collapsible-content"><div class="content-inner"><p>Повелитель Сланца очень медленно восстанавливает здоровье и получает огромный урон от взрывных и магических атак.</p></div></div>
 <input id="collapsible_shale3" class="toggle" type="checkbox">
-<label for="collapsible_shale3" class="lbl-toggleW" tabindex="0"><b>Гигант</b></label><div class="collapsible-content"><div class="content-inner"><p>Сланцевый Лорд наносит огромный урон зданиям и всегда имеет преимущество высоты.</p></div></div>
+<label for="collapsible_shale3" class="lbl-toggleW" tabindex="0"><b>Гигант</b></label><div class="collapsible-content"><div class="content-inner"><p>Повелитель Сланца наносит огромный урон зданиям и всегда имеет преимущество высоты.</p></div></div>
 <input id="collapsible_shale4" class="toggle" type="checkbox">
-<label for="collapsible_shale4" class="lbl-toggleW" tabindex="0"><b>Жажда Битвы</b></label><div class="collapsible-content"><div class="content-inner"><p>Сланцевый Лорд медленно восстанавливает энергию когда дерётся.</p></div></div>
+<label for="collapsible_shale4" class="lbl-toggleW" tabindex="0"><b>Жажда Битвы</b></label><div class="collapsible-content"><div class="content-inner"><p>Повелитель Сланца медленно восстанавливает энергию когда дерётся.</p></div></div>
 </td>
     <td class="xl271547" style="color:#FFF;background:#660000"><font size="3">25%</td>
     <td class="xl271547" style="color:#000000;background:#7fbfff"><font size="3">50%</td>
@@ -3184,7 +3184,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
     </td>
     <td class="xl271547_N" rowspan="5">Режущий</td>
     <td class="xl271547_N">-</td>
-        <td class="xl271547_N" rowspan="5">☯ <b>Critical Strike</b> (Колющий)</b></td>
+        <td class="xl271547_N" rowspan="5">☯ <b>Критическая Атака</b> (Колющий)</b></td>
 <td class="xl271547_N" rowspan="3">
 <input id="collapsible_kenji1" class="toggle" type="checkbox">
 <label for="collapsible_kenji1" class="lbl-toggle" tabindex="0"><b>Воодушевление</b></label><div class="collapsible-content"><div class="content-inner"><p>Во время боя, Кендзи может вдохновить своих союзников, увеличивая урон от их атак на 20% (AoE).</p></div></div></td>
