Графические исправления иконок и лого

--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@ a img:hover { cursor: url(https://i.imgur.com/mDJvGsf.png), auto;}
 
 
 .dheroui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px orange;
 }
 .dheroui:hover > img {
@@ -383,16 +383,15 @@ box-shadow: 0 0 1px black, 0 0 10px orange;
 }
 .dheroui:hover > .dunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px orange;
 }
 .dunitui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 text-decoration: none;
 outline : none;
 }
@@ -418,18 +417,17 @@ transition: all ease-in-out .5s;
 }
 .dunitui:hover > .dunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px orange;
 cursor: url(https://i.imgur.com/mDJvGsf.png), auto;
 }
 
 .sheroui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px red;
 }
 .sheroui:hover > img {
@@ -439,16 +437,15 @@ box-shadow: 0 0 1px black, 0 0 10px red;
 }
 .sheroui:hover > .sunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px red;
 }
 .sunitui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 text-decoration: none;
 outline : none;
 }
@@ -477,18 +474,17 @@ transition: all ease-in-out .5s;
 }
 .sunitui:hover > .sunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px red;
 cursor: url(https://i.imgur.com/RAnP8ID.png), auto;
 }
 
 .wheroui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px green;
 }
 .wheroui:hover > img {
@@ -498,16 +494,15 @@ cursor: url(https://i.imgur.com/w7gSSfX.png), auto;
 }
 .wheroui:hover > .wunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px green;
 }
 .wunitui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 text-decoration: none;
 outline : none;
 }
@@ -533,18 +528,17 @@ cursor: url(https://i.imgur.com/w7gSSfX.png), auto;
 }
 .wunitui:hover > .wunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px green;
 cursor: url(https://i.imgur.com/w7gSSfX.png), auto;
 }
 
 .lheroui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px #8c198c;
 }
 .lheroui:hover > img {
@@ -554,16 +548,15 @@ cursor: url(https://i.imgur.com/3Sexq2q.png), auto;
 }
 .lheroui:hover > .lunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px #8c198c;
 }
 .lunitui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 text-decoration: none;
 outline : none;
 }
@@ -589,50 +582,49 @@ cursor: url(https://i.imgur.com/3Sexq2q.png), auto;
 }
 .lunitui:hover > .lunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px #8c198c;
 cursor: url(https://i.imgur.com/3Sexq2q.png), auto;
 }
 
 .nheroui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px silver;
 }
 .nherouiK > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px silver, 0 0 15px orange;
 }
 .nherouiZ > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px purple, 0 0 15px blue;
 }
 .nherouiZ > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px purple, 0 0 15px blue;
 }
 .nherouiN > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 box-shadow: 0 0 1px black, 0 0 10px #e2ff8f;
 }
 .nheroui:hover > img {
@@ -657,34 +649,30 @@ box-shadow: 0 0 1px black, 0 0 10px #e2ff8f;
 }
 .nherouiK:hover > .nunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px orange;
 }
 .nherouiZ:hover > .nunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px blue;
 }
 .nherouiN:hover > .nunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px #e2ff8f;
 }
 .nheroui:hover > .nunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px silver;
 }
 .nunitui > img {
-position: relative;
+position: static;
 margin-top:0.5rem;
 margin-bottom:0.2rem;
-width:40%;
-height:40%;
+width:70px;
+width:52px;
 text-decoration: none;
 outline : none;
 }
@@ -710,7 +698,6 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 }
 .nunitui:hover > .nunitext {
 opacity: 1;
-max-height:70px;
 line-height: 1.5;
 text-shadow: 0 0 1px black, 0 0 10px silver;
 cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
@@ -726,7 +713,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 <tr>
    <tr class="xl151547">
    <td class="xl261547" style="font-size:12pt;text-align:center;" colspan="12"><br>
-<a href="https://battlerealms.fandom.com/wiki/Battle_Realms%3A_Winter_of_the_Wolf"><img src="https://i.imgur.com/sD1vJmJ.png" style="margin-bottom:0.1rem;width:50%;height:50%"></a>
+<a href="https://battlerealms.fandom.com/wiki/Battle_Realms%3A_Winter_of_the_Wolf"><img src="https://i.imgur.com/sD1vJmJ.png" style="margin-bottom:0.1rem;width:50%;height:80%"></a>
 <br><b>Версия: 1.50q (Последняя)</b><br><br>
 
 <img src="https://sun9-49.userapi.com/c856032/v856032670/10b8ee/xLS8O5Pf1pU.jpg" style="margin-right:4px;width:32px;height:22px" title="Выбранный язык: Русский"/>
@@ -740,7 +727,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
    <div class="wrap-collabsible" style="padding-top:0.6rem;padding-bottom:1.5rem;font-size:12pt;colspan=12">
   <input id="collapsible00" class="toggle" type="checkbox">
   <label for="collapsible00" class="lbl-toggle" tabindex="0"><strong>
-Последнее обновление: 21 Октября, 2019 (Русский перевод)
+Последнее обновление: 25 Октября, 2019 (Графические исправления)
 </strong>
 </label>
     <div class="collapsible-content">
