--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
    <div class="wrap-collabsible" style="padding-top:0.6rem;padding-bottom:1.5rem;font-size:12pt;colspan=12">
   <input id="collapsible00" class="toggle" type="checkbox">
   <label for="collapsible00" class="lbl-toggle" tabindex="0"><strong>
-Последнее обновление: 25 Октября, 2019 (Графические исправления)
+Последнее обновление: 20 Ноября, 2019 (Ссылка на игру в Steam)
 </strong>
 </label>
     <div class="collapsible-content">
@@ -742,6 +742,11 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
   </div>
 </div>
 <a href="https://battlerealms.github.io/chart-compact-ru" class="boxlink2" style="margin-bottom:0.8rem;margin-top:0.5rem"><b>Переключиться на Компактную Версию</b></a><br><br>
+</tr>
+<tr>
+<td class="xl261547" style="font-size:16pt;text-shadow: 0 0 3px rgba(35, 173, 278, 1);text-align:center;box-shadow: 0 0 6px rgba(35, 173, 278, 1);" colspan="12" ><br>
+Добавьте Battle Realms в ваш список желаемого в Steam. Выход в Ранний Доступ Steam уже 3 Декабря, 2019!<br><br>
+<iframe src="https://store.steampowered.com/widget/1025600/" frameborder="0" width="646" height="190"></iframe><br><br>
 </tr>
 <tr>
    <tr class="xl151547">
