--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 </label>
     <div class="collapsible-content">
     <div class="content-inner" style="padding-right:4rem; padding-left:4rem;font-size:12pt"><p>
-<b>Автор: <a href="https://vk.com/battlerealmsclub" class="simplink">KoMiKoZa</a>.</b><br><br>
+<b>Автор: <a href="https://vk.com/battlerealms" class="simplink">KoMiKoZa</a>.</b><br><br>
 <b>Элементы заднего плана: <a href="https://www.artstation.com/faro" class="simplink">Fabian Rosskopf</a>.<br>
 Иконки флагов стран: <a href="https://www.iconfinder.com/yummygum" class="simplink">Vincent Schwidder </a>.</b><br><br>
 Вся информация в таблице является правильной (<i>вы можете найти странным, что Дикое Око наносит режущий тип атаки, но это действительно так</i>) и соответствует последней версии BR (1.50q - Зима Волка). Некоторые названия способностей были придуманы, чтобы соответстовать оригинальной эстетике игры (не все способности были объявлены разработчиками).<br><br> За основу был взят русский перевод от Руссобит-М, некоторые названия были переработаны. <br><br>
