--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 <b>Элементы заднего плана: <a href="https://www.artstation.com/faro" class="simplink">Fabian Rosskopf</a>.<br>
 Иконки флагов стран: <a href="https://www.iconfinder.com/yummygum" class="simplink">Vincent Schwidder </a>.</b><br><br>
 Вся информация в таблице является правильной (<i>вы можете найти странным, что Дикое Око наносит режущий тип атаки, но это действительно так</i>) и соответствует последней версии BR (1.50q - Зима Волка). Некоторые названия способностей были придуманы, чтобы соответстовать оригинальной эстетике игры (не все способности были объявлены разработчиками).<br><br> За основу был взят русский перевод от Руссобит-М, некоторые названия были переработаны. <br><br>
- <b> Если вы вдруг найдёте какие-то ошибки или хотите что-то предложить, делайте это в <a href="https://vk.com/battlerealmsclub" class=
+ <b> Если вы вдруг найдёте какие-то ошибки или хотите что-то предложить, делайте это в <a href="https://vk.com/battlerealms" class=
 "simplink">Официальной Группе ВК</a>. Спасибо.</p>
     </div>
   </div>
@@ -751,7 +751,7 @@ cursor: url(https://i.imgur.com/ZbVhsno.png), auto;
 <tr>
    <tr class="xl151547">
    <td class="xl261547" style="font-size:12pt;text-align:center;" colspan="12"><br>
-<a href="https://vk.com/battlerealmsclub" class="boxlink">Группа Вконтакте</a>
+<a href="https://vk.com/battlerealms" class="boxlink">Группа Вконтакте</a>
 
 <a href="https://www.gog.com/game/battle_realms_winter_of_the_wolf" class="boxlink">Приобрести игру на GOG</a>
 
